# Aurora-Terrain-Vulkan-Toolkit

./: CMakeLists.txt  README.md
shaders/: double.comp  double.comp.spv  double.comp.spv.txt  downsample.comp  downsample.comp.spv  extract_tile.comp  extract_tile.comp.spv  normals.comp  normals.comp.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv
src/: build_command.cpp  build_command.h  export_mesh_command.cpp  export_mesh_command.h  main.cpp  setup_scene.py  stb_impl.cpp  view_command.cpp  view_command.h  vk_util.cpp  vk_util.h
